--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  rive: ^0.12.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/home.gif
 
       # An image asset can refer to one or more resolution-specific "variants", see
       # https://flutter.dev/assets-and-images/#resolution-aware
