--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/images/home.gif
+    - assets/files/
 
       # An image asset can refer to one or more resolution-specific "variants", see
       # https://flutter.dev/assets-and-images/#resolution-aware
